--- a/templates/accounts/booking.html
+++ b/templates/accounts/booking.html
@@ -41,7 +41,7 @@
 
        <br>
       <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h5>{{ current_date }}</h5></b></div>
-    <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h6>{{ current_day }}</h6></b></div>
+    <div class="d-flex justify-content-center" style="font-family:'Andale Mono', 'monospace';"><b><h6  style=" font-size:20px;">{{ current_day }}</h6></b></div>
      
     </div>
 
@@ -74,12 +74,12 @@ background-color: var(--stripe);" class="card bg-glass " style="color: blueviole
     </style>
     <div class="table-responsive">
    <div class="box" id="one" style="box-shadow: rgba(130, 138, 130, 0.346) 1px 1px 10px 5px; ;writing-mode: vertical-lr; text-orientation: sideways-right; font-size:medium;"> Note: The duration is 1 hour.</div>
-  <table class="table  text-center table-sm table-hover">
+  <table class="table  text-center table-sm table-hover flex-grow-1" >
     <thead bgcolor="#0dcaf0">
-      <tr >
-        <th scope="col" ><h3></h3>SLOT</th>
+      <tr  >
+        <th scope="col" ><h3 style=" font-size:21px; margin-bottom:0">SLOT</h3></th>
        
-        <th scope="col">STATUS</th>
+        <th scope="col"><h3 style=" font-size:21px; margin-bottom:0">STATUS</h3></th>
         
       </tr>
     </thead>
@@ -87,9 +87,47 @@ background-color: var(--stripe);" class="card bg-glass " style="color: blueviole
     <tbody class="table-dark" style="box-shadow: rgba(58, 58, 58, 0.133) 2px 2px 10px 7px;">
       <tr>
         
+        {% if i.slot_time == "6"  %}
+          <th scope="row" style=" padding-top: 2px;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM </b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "7"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "8"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "9"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "10"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "11"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font5ize:19px; margin-bottom:0"><b>{{i.slot_time}}:00 AM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "12"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>{{i.slot_time}}:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "13"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>01:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "14"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>02:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "15"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>03:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "16"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>04:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "17"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>05:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+        {% elif i.slot_time == "18"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>06:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+        {% elif i.slot_time == "19"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>07:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+        {% elif i.slot_time == "20"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>08:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+        {% elif i.slot_time == "21"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>09:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+        {% elif i.slot_time == "22"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>10:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+        {% elif i.slot_time == "23"  %}
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b>11:00 PM</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
 
-        <th scope="row" style=" padding-top: 12px ;"><h5><b>{{i.slot_time}}:00</b></h5></th>
-        
+        {% else %}
+
+         {% endif %}
+
         <td>
           {% if i.is_booked is False  %}
             {% if i.phone_number_registered == none  %}
@@ -118,7 +156,7 @@ background-color: var(--stripe);" class="card bg-glass " style="color: blueviole
       </ul>
     </div>
   </div>
-</div>>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
