--- a/templates/accounts/sign__up.html
+++ b/templates/accounts/sign__up.html
@@ -14,12 +14,12 @@
         }
     </style>
 </style>
-  
-  
-  
+
+
+
   </head>
   <body onload="document.body.style.opacity='1'">
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <!-- Section: Design Block -->
 <section class="background-radial-gradient overflow-hidden blur">
@@ -39,9 +39,9 @@
             hsl(218, 41%, 19%) 80%,
             transparent 100%);
             height: 850px;
-            
+
       }
-  
+
       #radius-shape-1 {
         height: 220px;
         width: 220px;
@@ -50,7 +50,7 @@
         background: radial-gradient(#44006b, #ad1fff);
         overflow: hidden;
       }
-  
+
       #radius-shape-2 {
         border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
         bottom: -60px;
@@ -60,17 +60,17 @@
         background: radial-gradient(#44006b, #ad1fff);
         overflow: hidden;
       }
-  
+
       .bg-glass {
         background-color: hsla(0, 0%, 100%, 0.9) !important;
         backdrop-filter: saturate(200%) blur(25px);
       }
     </style>
-  
+
     <div class="container  text-center text-lg-start my-5">
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-2 display-9 fw-bold ls-tight" style="color: hsl(218, 81%, 95%);">
+          <h1 class="my-1 display-10 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
             Would you like to book Futsal Grounds in Goa?<br> Find out more here!   <br />
             <span style="color: hsl(218, 81%, 75%)"></span>
           </h1>
@@ -81,36 +81,46 @@
         </div>
         <!-- <script language="JavaScript">
           function showInput() {
-              document.getElementById('display').innerHTML = 
+              document.getElementById('display').innerHTML =
                           document.getElementById("form3Example3").value;
           } -->
         </script>
         <div class="col-lg-6 mb- mb-lg-0 position-relative">
           <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
           <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-  
+
           <div class="card bg-glass login-box">
             <div class="card-body px-4 py-5 px-md-5">
-              <h6 style="color: hsl(219, 71%, 57%)">Kindly enter your details </h6>
-              <form name="login" method="post" action=""> 
+              <h5 style="color: hsl(219, 71%, 57%)">Kindly enter your details to signup</h5>
+              <form name="login" method="post" action="">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
+                  <div class="col-md-6 mb-7">
+                    <div class="form-outline">
+                      <label style="margin-top:5px; margin-bottom:0" class="form-label" for="form3Example1">Name</label>
+                      <input type="text" id="form3Example1"  name="username" class="form-control" placeholder="Name" required />
 
-                  
+                    </div>
+                  </div>
+
                 <!-- phone number input -->
                 <div class="form-outline mb-7">
-                  <label style="margin-top:5px; margin-bottom:0" class="form-label" for="form3Example3">Phone No</label>
+                  <label  style="margin-top:5px; margin-bottom:0" class="form-label" for="form3Example3">Phone No</label>
                   <input type="tel" id="form3Example3" name="phone_number" required class="form-control" placeholder="9834343434" maxlength="10" pattern="[0-9]{10}" />
 
                 </div>
-                <br>
-                <!-- otp send button -->
-                <button style="margin-top:8px;" type="submit" name="sendotp" value="sendotp" class="btn btn-warning">Login</button>
-                  <br>
 
-                  <a class="btn btn-info right mr-2" href="{% url 'sign_up' %}" style="margin-top:8px;"> <b>Sign up</b> </a>
+                  <!-- email input -->
+                <div class="form-outline mb-7">
+                  <label style="margin-top:5px; margin-bottom:0" class="form-label" for="form3Example3">Email<p style="font-size:10px; margin-bottom:0px">(you will receive OTP on this E-mail ID)</p></label>
+                  <input type="email" id="form3Example3" name="email" required class="form-control" placeholder="sample@gmail.com" maxlength="254" />
+
+                </div>
+
+                <!-- otp send button -->
+                <button type="submit" name="sendotp" value="sendotp" class="btn btn-warning" style="margin-top:8px;" >Send OTP</button>
                 <!-- Register buttons -->
-                {% csrf_token %} 
+                {% csrf_token %}
               </form>
             </div>
           </div>
